Initial push of frontend and backend files